removed duplicate files